# Auto_support_generator

./: .gitattributes  .gitignore  Build Auto Support Generator Installer.bat  INSTALL_RU.md  Install dependencies.bat  README.md  README_EN.md  README_RU.md  RELEASE_BETA_1_1.md  RELEASE_BETA_1_2.md  Run Auto SI Generator.bat  SECURITY_TEST_BETA_1_1.md  SI Generator GUI.bat  Setup Auto SI Generator.bat  pyproject.toml  style_config.example.yml
data/: compounds.csv
docs/: feature_report_ru.md  gui_design_options.md  si_template_proposal_ru.md
examples/: generated_support_example.docx  references.example.yml  sample_compounds.csv  test_input.docx
scripts/: auto_support_generator_app.py  auto_support_generator_installer.py  build_windows_installer.ps1  extract_nmr_report.qs
tests/: test_add_compounds_workflow.py  test_baseline_config.py  test_bookmarks.py  test_check_workflow.py  test_config_yaml.py  test_document_model.py  test_domain_compound.py  test_elemental_analysis.py  test_external_tools.py  test_formula_hrms.py  test_generate_workflow.py  test_generation_config.py  test_graph_state.py  test_gui_settings.py  test_gui_workflow.py  test_input_validation.py  test_installer.py  test_ir.py  test_journal_profile.py  test_legacy_compound_adapter.py  test_mnova_batch_recovery.py  test_mnova_ole.py  test_mnova_render_spec.py  test_nmr_domain.py  test_nmr_validation.py  test_output_layout.py  test_packaging.py  test_patch_workflow.py  test_reaction_loadings.py  test_references.py  test_release_beta_1_1.py  test_runtime_config.py  test_runtime_diagnostics.py  test_xrd.py  (+6 more)
(+410 files in other folders)
