[project]
name = "si-generator"
version = "0.1.0"
description = "Generate organic chemistry Supporting Information DOCX files from tabular compound data."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=1.2,<2",
    "olefile",
    "python-docx",
    "pywin32; platform_system == 'Windows'",
    "rdkit",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
si-generator = "si_generator.cli:main"
si-generator-gui = "si_generator.gui:main"

[tool.setuptools.package-data]
"si_generator" = ["resources/scripts/*.qs", "resources/assets/*.png", "templates/*.docx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
